Coverity analysis defect 162922: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/4197827dfd19dfe79142f7d25f6e6f0f/bazel_cache/a1dc365b351479c659b51fd1e7d5df0a/execroot/_main/src/mongo/db/pipeline/document_source_lookup.h:467: UNINIT_CTOR 162922 Class member declaration for "_fromNsIsAView".
      /data/mci/4197827dfd19dfe79142f7d25f6e6f0f/bazel_cache/a1dc365b351479c659b51fd1e7d5df0a/execroot/_main/src/mongo/db/pipeline/document_source_lookup.cpp:436: UNINIT_CTOR 162922 Non-static class member "_fromNsIsAView" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Josh Siegel (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: