SERVER-108521 Fix uninitialized `DocumentSourceLookUp` field (#39983)

GitOrigin-RevId: f0630e0937678d0a5357adfefc9c994b3ef38f8d